# Object_Recognition

./: CMakeLists.txt  readme.txt
filesystem/: testing.csv  train.csv
header_files/: objfun.h
project_3_sub/: CMakeLists.txt  image_testing.cpp  objfun.h  readme.txt
src/: csv_util.cpp  function_implement.cpp  image_testing.cpp  thresholding.cpp  try.cpp
